 * Fix: Reinstate missing filter by page type on page search (Matt Westcott)
 * Fix: Ensure very long words can wrap when viewing saved comments (Chiemezuo Akujobi)
 * Fix: Avoid forgotten password link text conflicting with the supplied aria-label (Thibaud Colas)
 * Fix: Fix log message to record the correct restriction type when removing a page view restriction (Rohit Sharma, Hazh. M. Adam)
 * Docs: Document `WAGTAILADMIN_BASE_URL` on "Integrating Wagtail into a Django project" page (Shreshth Srivastava)
 * Docs: Replace incorrect screenshot for authors listing on tutorial (Shreshth Srivastava)
 * Docs: Add documentation for building non-model-based choosers using the _queryish_ library (Matt Westcott)
 * Docs: Fix incorrect tag library import on focal points example (Hatim Makki Hoho)
 * Docs: Add reminder about including your custom Draftail feature in any overridden `WAGTAILADMIN_RICH_TEXT_EDITORS` setting (Charlie Sue)
 * Docs: Mention the need to install `python3-venv` on Ubuntu (Brian Mugo)
 * Docs: Document the use of the Google developer documentation style guide in documentation (Damilola Oladele)
 * Docs: Fix Inconsistent URL Format in Getting Started tutorial (Olumide Micheal)
 * Maintenance: Fix snippet search test to work on non-fallback database backends (Matt Westcott)
 * Maintenance: Update Eslint, Prettier, Jest, a11y-dialog, axe-core and js-cookie npm packages (LB (Ben) Johnston)
 * Maintenance: Add npm scripts for TypeScript checks and formatting SCSS files (LB (Ben) Johnston)
 * Maintenance: Run tests in parallel in some of the CI setup (Sage Abdullah)
 * Maintenance: Remove unused WorkflowStatus view, urlpattern, and workflow-status.js (Storm Heg)
 * Maintenance: Add support for options/attrs in Telepath widgets so that attrs render on the created DOM (Storm Heg)
 * Maintenance: Update pre-commit hooks to be in sync with latest changes to Eslint & Prettier for client-side changes (Storm Heg)