@@ -92,6 +92,7 @@ This feature was developed by Paarth Agarwal and Thibaud Colas as part of the Go
  * Ensure very long words can wrap when viewing saved comments (Chiemezuo Akujobi)
  * Avoid forgotten password link text conflicting with the supplied aria-label (Thibaud Colas)
  * Fix log message to record the correct restriction type when removing a page view restriction (Rohit Sharma, Hazh. M. Adam)
+ * Avoid potential race condition with new Page subscriptions on the edit view (Alex Tomkins)
 
 ### Documentation
 
